# StupidFarmer-Crop-recommendation-system-with-dumb-chatbot

./: .dockerignore  .gitignore  Dockerfile  README.md  africa_crops.json  crop_ranges.json  data-analysis.ipynb  gui.py  install.py  model_crops.json  pyproject.toml  release.sh
CRS_V2.5_Lite/: .gitignore  Crop_recommendation.csv  LICENSE  README.md  crop_ranges.json  main.py  requirements.txt
CRS_V2.5_Lite/dataset/: Crop_recommendation.csv
dataset/: test.txt
scripts/: merge_and_train.py  train_model.py
v0.1/: LICENSE  README.md
v1.0/: README.md  main.py
v2.5/: .gitignore  README.md  continent_encoder.pkl  crop_ranges.json  crop_region_map.json  data-analysis.ipynb  label_encoder.pkl  main.py  soil_profiles.json
v2.5/scripts/: prepare_data.py  train_yield_model.py  weather.py
