[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "seedbrain"
version = "2.5.0"
description = "AI-powered crop recommendation with real FAO data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Mohamed Alouhmy", email = "mohamedalouhmy69@gmail.com"},
]
keywords = ["agriculture", "crop-recommendation", "machine-learning", "xgboost", "fao"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "customtkinter>=5.2.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "joblib>=1.3.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
llm = ["llama-cpp-python>=0.2.0"]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/Exo-del/SeedBrain-CRS"
Issues = "https://github.com/Exo-del/SeedBrain-CRS/issues"
Releases = "https://github.com/Exo-del/SeedBrain-CRS/releases"

[tool.setuptools.packages.find]
include = ["CRS_V2.5_Lite*"]
